--- a/10_integration/m22_raw_integration_fm.Rmd
+++ b/10_integration/m22_raw_integration_fm.Rmd
@@ -342,7 +342,7 @@ gogo()
 # bsub < /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code_lnk/bash_scripts/submsn_seu_norm_integration_bsub.sh
 
 # --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*.f.RDS" \
-# --hvg 1000 --cluster_resoln 0.1 --cl_nm "seurat_clusters" --integrtd_pc30 "no" \
+# --hvg 900 --cluster_resoln 0.1 --cl_nm "seurat_clusters" --integrtd_pc30 "no" \
 # --ncores "5" --mem "50 GB" --run_time="55.min" \
 
 # --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*.fLE.RDS" \
@@ -350,7 +350,7 @@ gogo()
 # --ncores "5" --mem "50 GB" --run_time="55.min" \
 
 # --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*.m.RDS" \
-# --hvg 800 --cluster_resoln 0.1 --cl_nm "seurat_clusters" --integrtd_pc30 "no" \
+# --hvg 700 --cluster_resoln 0.1 --cl_nm "seurat_clusters" --integrtd_pc30 "no" \
 # --ncores "5" --mem "50 GB" --run_time="55.min" \
 ```
 
@@ -359,30 +359,27 @@ gogo()
 # bsub < /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code_lnk/bash_scripts/submsn_intgrtn_pc_harmony_bsub.sh
 
 # --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*_norm.RDS" \
-# --mthd_nm "harmony_PC_man" --cluster_resoln 0.3 --intgrtn_pc 8 --integrtd_pc_man "yes" \
+# --mthd_nm "harmony_PC_man" --cluster_resoln 0.3 --intgrtn_pc 86 --integrtd_pc_man "yes" \
 # --ncores "5" --mem "40 GB" --run_time="1.hour" \
 ```
 
-```{r, message=F, warning=F}
-# ##Read BPcells matrices
-# fm_leiden_w_donors_norm_harmony <- list.files("data/processed/Pf", pattern = "v3_m2_asex_cr_(filt|filt_noM55)_norm.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-#   set_names(nm = (str_remove_all(.,'data/processed/Pf/m2_all/v3_m2_asex_cr_|_norm.*'))) %>% 
-#   # .[sample_name] %>%
-#   map(readRDS)
 
+```{r, message=F, warning=F, eval=T}
+## Get file list
+fm_leiden_w_donors_norm_harmony_list_files <- Sys.glob("data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*_norm_harmony_PC_man.RDS")
+
+fm_leiden_w_donors_norm_harmony_list_files
 ```
 
-```{r, message=F, warning=F}
-##Read BPcells matrices
-# fm_leiden_w_donors_norm_harmony <- list.files("data/processed/Pf", pattern = "v3_m2_asex_cr_filt_(all|noM55)_jc._norm_harmony_PC_man.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-fm_leiden_w_donors_norm_harmony <- list.files("data/processed/Pf", pattern = "fm_leiden_w_donors_.*_norm_harmony_PC_man.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/processed/Pf/m2_all/fm_leiden_w_donors_.|_norm.*'))) %>% 
+```{r, message=F, warning=F, eval=T}
+## read filtered barcodes
+fm_leiden_w_donors_norm_harmony <- map(fm_leiden_w_donors_norm_harmony_list_files, ~.x %>% 
+  set_names(nm = (str_remove_all(.,'data/processed/Pf/m2_all/integration/fm_leiden_w_donors_|_norm_harmony_PC_man.RDS')))) %>% 
+  unlist(., recursive = F) %>% 
   # .[sample_name] %>%
   map(readRDS)
 
 ```
-
-
 
 ```{r, warning=FALSE, message=FALSE}
 fm_leiden_w_donors_norm_harmony[[3]]
@@ -394,19 +391,18 @@ fm_leiden_w_donors_norm_harmony[[3]]@meta.data %>% count(orig.ident)
 
 
 ```{r, warning=FALSE, message=FALSE}
-#ap2g
-fm_leiden_w_donors_norm_harmony_umap_mdata <- map(fm_leiden_w_donors_norm_harmony, ~{
-  .x@meta.data %>% 
-    rownames_to_column("bcode") %>%
-      left_join(., .x@reductions$umap.harmony_PC_man@cell.embeddings %>% data.frame() %>% rownames_to_column("bcode"), by = "bcode")
-})
+# fm_leiden_w_donors_norm_harmony_umap_mdata <- map(fm_leiden_w_donors_norm_harmony, ~{
+#   .x@meta.data %>% 
+#     rownames_to_column("bcode") %>%
+#       left_join(., .x@reductions$umap.harmony_PC_man@cell.embeddings %>% data.frame() %>% rownames_to_column("bcode"), by = "bcode")
+# })
 ```
 
 
 ```{r, message=FALSE, warning=FALSE, eval=T}
-# Save the clean umaps for plotting
-saveRDS(fm_leiden_w_donors_norm_harmony_umap_mdata, "data/processed/Pf/m2_all/asex_integration_comtmnt_DE_figs/fm_leiden_w_donors_norm_harmony_umap_mdata.RDS")
-# go()
+# # Save the clean umaps for plotting
+# saveRDS(fm_leiden_w_donors_norm_harmony_umap_mdata, "data/processed/Pf/m2_all/integration_figs/fm_leiden_w_donors_norm_harmony_umap_mdata.RDS")
+
 ```
 
 
@@ -428,25 +424,24 @@ saveRDS(fm_leiden_w_donors_norm_harmony_umap_mdata, "data/processed/Pf/m2_all/as
 
 
 ```{r, warning=FALSE, message=FALSE}
-map(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, label = T, reduction = "integrated.harmony_PC_man"))
-map(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man"))
-map(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, label = T, group.by = "stage", reduction = "umap.harmony_PC_man") + scale_color_manual(values = sp_fld_colors))
-map(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, group.by = "donor", reduction = "umap.harmony_PC_man"))
-map(fm_leiden_w_donors_norm_harmony, ~FeaturePlot(.x, features = "nFeature_RNA", reduction = "umap.harmony_PC_man"))
-map(fm_leiden_w_donors_norm_harmony, ~FeaturePlot(.x, features = "nCount_RNA", reduction = "umap.harmony_PC_man"))
+imap(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, group.by = "leiden", reduction = "umap.harmony_PC_man")+ labs(title = .y))
+
+```
+
+```{r, warning=FALSE, message=FALSE}
+imap(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, label = T, reduction = "integrated.harmony_PC_man") + labs(title = .y))
+imap(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man")+ labs(title = .y))
+imap(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, group.by = "donor", reduction = "umap.harmony_PC_man")+ labs(title = .y))
+imap(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, group.by = "leiden", reduction = "umap.harmony_PC_man")+ labs(title = .y))
+imap(fm_leiden_w_donors_norm_harmony, ~FeaturePlot(.x, features = "nFeature_RNA", reduction = "umap.harmony_PC_man")+ labs(title = .y))
+imap(fm_leiden_w_donors_norm_harmony, ~FeaturePlot(.x, features = "nCount_RNA", reduction = "umap.harmony_PC_man")+ labs(title = .y))
 # VlnPlot(fm_leiden_w_donors_norm_harmony, features = "nCount_RNA", group.by = "seurat_clusters", reduction = "umap.harmony_PC_man")
 
 ```
 
 
-
-```{r, warning=FALSE, message=FALSE}
-map(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, label = T, group.by = "stage", reduction = "umap.harmony_PC_man") + scale_color_manual(values = sp_col_new))
-
-```
-
 ```{r, warning=FALSE, message=FALSE, fig.width=8, fig.height=3}
-map(fm_leiden_w_donors_norm_harmony, ~FeaturePlot(.x, features = c("PF3D7-1222600", "PF3D7-0113600", "PF3D7-1102500"), reduction = "umap.harmony_PC_man", ncol = 3))
+map(fm_leiden_w_donors_norm_harmony, ~FeaturePlot(.x, features = c("PF3D7-0202000", "PF3D7-0113600", "PF3D7-1102500"), reduction = "umap.harmony_PC_man", ncol = 3))
 
 ```
 
@@ -490,20 +485,6 @@ plot_ly(data = data.frame(fm_leiden_w_donors_norm_harmony[["noM55_jcC"]]@reducti
 ```
 
 
-```{r, warning=FALSE, message=FALSE, eval=F}
-# Display the combined datasets as an interactive 3D plot
-
-plot_ly(data = data.frame(fm_leiden_w_donors_norm_harmony[["all_jcC"]]@reductions[["umap.harmony_PC_man"]]@cell.embeddings),
-        x = ~umapharmonyPCman_1, y = ~umapharmonyPCman_2, z = ~umapharmonyPCman_3,
-        color= fm_leiden_w_donors_norm_harmony[["all_jcC"]]@meta.data$harmony_PC_man_clusters,
-        # colors = c('blue', 'red'),
-        opacity = 0.8,
-        size = 0.1, 
-        type = 'scatter3d'
-)
-
-```
-
 ```{r, warning=FALSE, message=FALSE}
 imap(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, label = T, reduction = "umap.harmony_PC_man", group.by = "harmony_PC_man_clusters") + labs(title = .y))
 
@@ -534,208 +515,6 @@ map(fm_leiden_w_donors_norm_harmony_jnd, ~unique(Idents(.x)))
 
 
 ```{r, warning=FALSE, message=FALSE}
-rm(fm_leiden_w_donors_norm_harmony)
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-# imap(fm_leiden_w_donors_norm_harmony_jnd, ~saveRDS(., paste0("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_", .y,"_norm_harmony_jnd.RDS")))
-imap(fm_leiden_w_donors_norm_harmony_jnd, ~saveRDS(., paste0("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_", .y,"_norm_harmony_jnd3.RDS")))
+imap(fm_leiden_w_donors_norm_harmony_jnd, ~saveRDS(., paste0("data/processed/Pf/m2_all/fm_leiden_w_donors_", .y,"_norm_harmony_jnd.RDS")))
 
 ```
-
-######################START## Save a diet slim object which is lighter for faster processing if one just needs counts#####################
-
-```{r, message=F, warning=F}
-fm_leiden_w_donors_norm_harmony_jnd_slim <- fm_leiden_w_donors_norm_harmony_jnd
-```
-
-```{r, warning=FALSE, message=FALSE}
-for (nm in names(fm_leiden_w_donors_norm_harmony_jnd_slim)) {
-  fm_leiden_w_donors_norm_harmony_jnd_slim[[nm]][["RNA"]]$counts <- as(fm_leiden_w_donors_norm_harmony_jnd_slim[[nm]][["RNA"]]$counts, Class = "dgCMatrix")
-  fm_leiden_w_donors_norm_harmony_jnd_slim[[nm]][["RNA"]]$data <- as(fm_leiden_w_donors_norm_harmony_jnd_slim[[nm]][["RNA"]]$data, Class = "dgCMatrix")
-
-}
-```
-
-```{r, message=F, warning=F}
-fm_leiden_w_donors_norm_harmony_jnd_slim <- map(fm_leiden_w_donors_norm_harmony_jnd_slim, ~CreateSeuratObject(
-  counts = LayerData(.x, layer = "counts"), 
-  data = LayerData(.x, layer = "data"),  
-  meta.data = .x@meta.data))
-```
-
-```{r, warning=FALSE, message=FALSE}
-for (nm in names(fm_leiden_w_donors_norm_harmony_jnd_slim)) {
-  
-  fm_leiden_w_donors_norm_harmony_jnd_slim[[nm]]@reductions$umap.harmony_PC_man = fm_leiden_w_donors_norm_harmony_jnd[[nm]]@reductions$umap.harmony_PC_man
-  
-  fm_leiden_w_donors_norm_harmony_jnd_slim[[nm]]@reductions$integrated.harmony_PC_man = fm_leiden_w_donors_norm_harmony_jnd[[nm]]@reductions$integrated.harmony_PC_man
-
-}
-```
-
-
-```{r}
-# save object
-imap(fm_leiden_w_donors_norm_harmony_jnd_slim, ~saveRDS(.x, paste0("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_", .y, "_norm_harmony_jnd_slim3.RDS")))
-
-```
-
-######################END## Save a diet slim object which is lighter for faster processing if one just needs counts#####################
-
-```{r, warning=FALSE, message=FALSE}
-map(fm_leiden_w_donors_norm_harmony_jnd, ~FeaturePlot(.x, features = c("PF3D7-1222600", "PF3D7-0113600"), reduction = "umap.harmony_PC_man", order = T))
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-gogo()
-```
-
-##!!!! NOTE - Below should be deleted if we decide not to use SCT
-####################SCT INTEGRATION alternative ####################
-
-```{r, warning=FALSE, message=FALSE}
-# split layers
-v3_m2_asex_cr_filt[["RNA"]] <- split(v3_m2_asex_cr_filt[["RNA"]], f = v3_m2_asex_cr_filt$donor)
-
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-# run sctransform
-v3_m2_asex_cr_filt_sct <- SCTransform(v3_m2_asex_cr_filt, verbose = FALSE, variable.features.n = 400)
-# v3_m2_asex_cr_filt_sct <- SCTransform(v3_m2_asex_cr_filt, verbose = FALSE, variable.features.n = 300)
-```
-
-```{r, warning=FALSE, message=FALSE}
-# These are now standard steps in the Seurat workflow for visualization and clustering
-v3_m2_asex_cr_filt_sct <- RunPCA(v3_m2_asex_cr_filt_sct, verbose = FALSE, npcs = 20)
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-# run sctransform
-DimPlot(v3_m2_asex_cr_filt_sct, reduction = "pca")
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-# Error in getGlobalsAndPackages(expr, envir = envir, globals = globals) : 
-options(future.globals.maxSize = 1000 * 1024^2)  # 1000 MiB (or 1 GiB)
-
-v3_m2_asex_cr_filt_sct_int <- IntegrateLayers(
-  object = v3_m2_asex_cr_filt_sct,
-  method = RPCAIntegration,
-  normalization.method = "SCT",
-  verbose = F,
-  # k.weight = 90,
-)
-
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-
-v3_m2_asex_cr_filt_sct_int <- FindNeighbors(v3_m2_asex_cr_filt_sct_int, dims = 1:5, reduction = "integrated.dr")
-v3_m2_asex_cr_filt_sct_int <- FindClusters(v3_m2_asex_cr_filt_sct_int, resolution = 0.5)
-```
-
-```{r, warning=FALSE, message=FALSE}
-# These are now standard steps in the Seurat workflow for visualization and clustering
-v3_m2_asex_cr_filt_sct_int <- RunUMAP(v3_m2_asex_cr_filt_sct_int, dims = 1:5, verbose = FALSE, n.components = 3, seed.use = 867)
-v3_m2_asex_cr_filt_sct_int <- FindNeighbors(v3_m2_asex_cr_filt_sct_int, dims = 1:5, verbose = FALSE)
-v3_m2_asex_cr_filt_sct_int <- FindClusters(v3_m2_asex_cr_filt_sct_int, verbose = FALSE, resolution = 0.1)
-```
-
-```{r, warning=FALSE, message=FALSE}
-# saveRDS(v3_m2_asex_cr_filt_sct_int, "data/processed/Pf/m2_all/v3_m2_asex_cr_filt_sct_int.RDS")
-```
-
-```{r, warning=FALSE, message=FALSE}
-v3_m2_asex_cr_filt_sct_int <- readRDS("data/processed/Pf/m2_all/v3_m2_asex_cr_filt_sct_int.RDS")
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-DimPlot(v3_m2_asex_cr_filt_sct_int, label = T, reduction = "pca")
-DimPlot(v3_m2_asex_cr_filt_sct_int, label = T)
-DimPlot(v3_m2_asex_cr_filt_sct_int, label = T, group.by = "stage") + scale_color_manual(values = sp_fld_colors)
-DimPlot(v3_m2_asex_cr_filt_sct_int, group.by = "donor")
-map(fm_leiden_w_donors_norm_harmony, ~FeaturePlot(v3_m2_asex_cr_filt_sct_int, features = "nFeature_RNA"))
-map(fm_leiden_w_donors_norm_harmony, ~FeaturePlot(v3_m2_asex_cr_filt_sct_int, features = "nCount_RNA"))
-VlnPlot(v3_m2_asex_cr_filt_sct_int, features = "nCount_RNA", group.by = "seurat_clusters")
-
-```
-
-
-```{r, warning=FALSE, message=FALSE, eval=T}
-# Display the combined datasets as an interactive 3D plot
-
-plot_ly(data = data.frame(v3_m2_asex_cr_filt_sct_int@reductions[["umap"]]@cell.embeddings),
-        x = ~umap_1, y = ~umap_2, z = ~umap_3,
-        color= v3_m2_asex_cr_filt_sct_int@meta.data$stage_fld,
-        # colors = c('blue', 'red'),
-        opacity = 0.8,
-        size = 0.1, 
-        type = 'scatter3d'
-)
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-DimPlot(v3_m2_asex_cr_filt_sct_int, label = T, group.by = "stage", dims = c(1,3))
-DimPlot(v3_m2_asex_cr_filt_sct_int, label = T, group.by = "stage", dims = c(2,3))
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-DimPlot(v3_m2_asex_cr_filt_sct_int, label = T, group.by = "stage", dims = c(1,3))
-DimPlot(v3_m2_asex_cr_filt_sct_int, label = T, dims = c(1,3))
-
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-DimPlot(v3_m2_asex_cr_filt_sct_int, label = T, group.by = "stage", dims = c(1,3))
-DimPlot(v3_m2_asex_cr_filt_sct_int, label = T, dims = c(1,3))
-
-```
-
-```{r, warning=FALSE, message=FALSE}
-## ap2g
-DefaultAssay(v3_m2_asex_cr_filt_sct_int) <- "RNA"
-v3_m2_asex_cr_filt_sct_int <- NormalizeData(v3_m2_asex_cr_filt_sct_int) 
-```
-
-```{r, warning=FALSE, message=FALSE}
-## ap2g
-FeaturePlot(v3_m2_asex_cr_filt_sct_int, features = "PF3D7-1222600", order = T) 
-FeaturePlot(v3_m2_asex_cr_filt_sct_int, features = "PF3D7-1222600", reduction = "pca", order = T) 
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-## ap2g
-v3_m2_asex_cr_filt_sct_int_ap2g <- subset(v3_m2_asex_cr_filt_sct_int, subset = `PF3D7-1222600` > 0, slot = 'counts')
-
-table(v3_m2_asex_cr_filt_sct_int_ap2g$donor)
-```
-
-```{r, warning=FALSE, message=FALSE}
-## ap2g
-FeaturePlot(v3_m2_asex_cr_filt_sct_int, features = "PF3D7-1215500", order = T) 
-FeaturePlot(v3_m2_asex_cr_filt_sct_int, features = "PF3D7-1215500", reduction = "pca", order = T) 
-```
-
-
-```{r, warning=FALSE, message=FALSE}
-
-DefaultAssay(v3_m2_asex_cr_filt_sct_int) <- "SCT"
-```
-
-
-
-####################SCT INTEGRATION alternative ####################
-
